<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/dialog_inset"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingLeft="40dp"
        android:paddingTop="16dp"
        android:paddingRight="40dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/requestPermissionTitle"
            style="@style/plainTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_permission_title"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/requestPermissionTextView"
            style="@style/plainTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/request_permission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requestPermissionTitle" />

        <android.widget.Button
            android:id="@+id/gruntPermissionButton"
            style="@style/buttonStyle"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/grunt_permission"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requestPermissionTextView" />

        <android.widget.Button
            android:id="@+id/closeAppButton"
            style="@style/cancelButtonStyle"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/close_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requestPermissionTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>